# krunnerStocksMarket

./: .gitignore  CMakeLists.txt  README.md  krunnerStocksMarket.kdev4
src/: CMakeLists.txt  krunnerStocksMarket.cpp  krunnerStocksMarket.h  plasma-runner-krunnerstocksmarket.desktop  smconnect.cpp  smconnect.h  smprice.cpp  smprice.h
